force-app/main/default/objects/Service_Activation__c/Service_Activation__c.object-meta.xml
<CustomObject>
    <description>Tracks service activation lifecycle for digital products and bundles after payment is confirmed. Created automatically by MuleSoft when an Invoice transitions to Paid status.</description>
    <label>Service Activation</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Service Activation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Activations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>