force-app/main/default/objects/Service_Activation__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Date and time when the service was activated by MuleSoft.</description>
    <label>Activation Date</label>
    <type>DateTime</type>
</CustomField>