force-app/main/default/objects/Service_Activation__c/fields/Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Activation_Status__c</fullName>
    <description>Lifecycle status of the activated service.</description>
    <label>Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>