force-app/main/default/objects/Service_Activation__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Invoice amount that triggered this activation (for reporting / dashboards).</description>
    <label>Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>