force-app/main/default/objects/Service_Activation__c/fields/Invoice_Reference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference__c</fullName>
    <description>Reference to the native RLM Invoice DocumentNumber that triggered this activation.</description>
    <externalId>true</externalId>
    <label>Invoice Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>