force-app/main/default/objects/Service_Activation__c/fields/Sendcloud_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Sendcloud_Carrier__c</fullName>
    <description>Carrier name fetched live from Sendcloud shipping methods API (e.g. DHL_DE, UPS, DPD).</description>
    <label>Sendcloud Carrier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>