force-app/main/default/objects/Service_Activation__c/fields/Sendcloud_Parcel_Id__c.field-meta.xml
<CustomField>
    <fullName>Sendcloud_Parcel_Id__c</fullName>
    <description>Sendcloud parcel ID returned by POST /api/v2/parcels. Empty for digital orders, prefixed LOCAL- when API call fell back.</description>
    <label>Sendcloud Parcel ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>