force-app/main/default/objects/Service_Activation__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>Type of service being activated.</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS License</fullName>
                <default>true</default>
                <label>SaaS License</label>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Hardware Bundle</fullName>
            </value>
            <value>
                <fullName>Support Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>