force-app/main/default/objects/Service_Activation__c/fields/Slack_Notified__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if MuleSoft sent a Slack notification for this activation. Populated by stripe-webhook-flow.</description>
    <label>Slack Notified</label>
    <type>Checkbox</type>
</CustomField>