force-app/main/default/objects/Service_Activation__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Tracking or license reference returned by the external fulfillment / activation system.</description>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>